--- a/index.ipynb
+++ b/index.ipynb
@@ -317,12 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] > alternative['rating']"
+    "    return restaurant['rating'] > alternative['rating']"
    ]
   },
   {
