--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return restaurant[len()]"
+    "    return restaurant[len('price')] "
    ]
   },
   {
