--- a/index.ipynb
+++ b/index.ipynb
@@ -401,12 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return restaurant['price'] < alternative[l'price')]"
+    "    return restaurant['price'] < alternative['price']"
    ]
   },
   {
