--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating'] >="
+    "    if restaurant['rating'] >= rating:\n",
+    "        return"
    ]
   },
   {
