--- a/index.ipynb
+++ b/index.ipynb
@@ -480,13 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] >= rating:\n",
-    "        return"
+    "        return True\n",
+    "    return False"
    ]
   },
   {
